--- a/app/src/main/res/layout/content_showtime.xml
+++ b/app/src/main/res/layout/content_showtime.xml
@@ -21,17 +21,20 @@
             app:diagonal_angle="10"
             diagonal:diagonal_direction="left"
             diagonal:diagonal_position="bottom">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
+
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/map"
-                tools:context=".MapsActivity"
-                android:name="com.google.android.gms.maps.SupportMapFragment" />
-        </RelativeLayout>
+                android:layout_height="match_parent">
+
+                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:id="@+id/map"
+                    android:name="com.google.android.gms.maps.SupportMapFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    tools:context=".MapsActivity" />
+
+            </RelativeLayout>
         </com.github.florent37.diagonallayout.DiagonalLayout>
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
