fix : map gestures disable , add turquoise overlay

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3EBBC9</color>
+    <color name="colorPrimaryLight">#a63ebbc9</color>
     <color name="colorPrimaryDark">#1D1D29</color>
     <color name="colorAccent">#EF5C54</color>
     <color name="white">#FFFFFF</color>
