--- a/app/src/main/res/layout/content_showtime.xml
+++ b/app/src/main/res/layout/content_showtime.xml
@@ -16,7 +16,7 @@
 
         <com.github.florent37.diagonallayout.DiagonalLayout
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="@dimen/_210sdp"
             android:elevation="10dp"
             app:diagonal_angle="10"
             diagonal:diagonal_direction="left"
@@ -25,16 +25,24 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
                 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                     xmlns:tools="http://schemas.android.com/tools"
                     android:id="@+id/map"
                     android:name="com.google.android.gms.maps.SupportMapFragment"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="@dimen/_210sdp"
                     tools:context=".MapsActivity" />
-
+                <View
+                    android:clickable="false"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorPrimaryLight"/>
             </RelativeLayout>
         </com.github.florent37.diagonallayout.DiagonalLayout>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/wwdummy"
+            android:layout_marginTop="@dimen/_10sdp"/>
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
