--- a/app/src/main/res/layout/content_showtime.xml
+++ b/app/src/main/res/layout/content_showtime.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:common="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="in.co.influx.showtimecinemas.ShowtimeActivity"
     tools:showIn="@layout/activity_showtime">
@@ -37,6 +38,29 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/colorPrimaryLight"/>
+                <in.co.influx.showtimecinemas.util.font.CommonFontsTextview
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:id="@+id/tvCinemasLabel"
+                    android:text="@string/cinemasaround"
+                    android:textColor="@color/white"
+                    common:font="NunitoR.ttf"/>
+                <view
+                    android:layout_width="@dimen/_1sdp"
+                    android:layout_height="@dimen/_1sdp"
+                    android:id="@+id/centeralLine"
+                    android:layout_centerInParent="true"/>
+                <ImageView
+                    android:layout_width="@dimen/_20sdp"
+                    android:layout_height="@dimen/_20sdp"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/you_oval"
+                    android:layout_marginBottom="@dimen/_20sdp"
+                    android:layout_marginLeft="@dimen/_40sdp"
+                    android:layout_above="@+id/centeralLine"
+                    />
             </RelativeLayout>
         </com.github.florent37.diagonallayout.DiagonalLayout>
         <ImageView
